2003-06-12  Richard Williamson  <rjw@apple.com>

	Restoring fix for 3221078 that I earlier backed out in a
	panic about performance.  In careful performance testing
	I now see no performance regression, and maybe a tiny improvement.
	The earlier performance regression Vicki saw was entirely
	due to the incorrect checkin for the fix to 3288532.

        Reviewed by Chris & Gramps.

        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:

2003-06-12  Richard Williamson  <rjw@apple.com>

	Correct fix for 3288532 again.  This time will feeling!

        Reviewed by Gramps.

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList setCapacity:]):

2003-06-12  Don Melton  <gramps@apple.com>

	Since Richard didn't actually correct the fix for 3288532 in
	WebBackForwardList.m, I've backed out out his original fix entirely.

        * History.subproj/WebBackForwardList.m:
        (-[WebBackForwardList setCapacity:]):

2003-06-12  Richard Williamson   <rjw@apple.com>

	Correct fix for 3288532.

        * History.subproj/WebBackForwardList.m:

2003-06-12  Richard Williamson   <rjw@apple.com>

	Fixed 3288532.  When setCapacity: shrinks capacity, trim
	the back/forward list.  Setting to zero will effectively
	flush the list.

        Reviewed by John.

        * History.subproj/WebBackForwardList.m:

2003-06-12  Richard Williamson   <rjw@apple.com>

	Fixed 3221078.  Maintain a seperate width map
	for substitute fonts to avoid collision of glyph
	codes.

        Reviewed by Chris & Gramps.

        * WebCoreSupport.subproj/WebTextRenderer.h:
        * WebCoreSupport.subproj/WebTextRenderer.m:

=== Safari-84 ===

2003-06-12  Darin Adler  <darin@apple.com>

        Fixed by Richard, reviewed by me.

	- fixed 3289047 -- REGRESSION: can't go back after using form at attwireless.com

        * WebCoreSupport.subproj/WebBridge.m: